default/objects/NVMStatsSF__NVM_Outbound_CDR__c/NVMStatsSF__NVM_Outbound_CDR__c.object-meta.xml
<CustomObject>
    <label>NVM Outbound CDR</label>
    <nameField>
        <displayFormat>OCDR-{000000000}</displayFormat>
        <label>NVM Outbound CDR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NVM Outbound CDRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>