default/objects/NVMStatsSF__NVM_Outbound_CDR__c/fields/NVMStatsSF__AppletName__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__AppletName__c</fullName>
    <label>AppletName</label>
    <length>70</length>
    <type>Text</type>
</CustomField>