default/objects/NVMStatsSF__NVM_Outbound_CDR__c/fields/NVMStatsSF__RingDuration__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__RingDuration__c</fullName>
    <label>RingDuration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>