default/objects/NVMStatsSF__NVM_Outbound_CDR__c/fields/NVMStatsSF__TelNum__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__TelNum__c</fullName>
    <label>TelNum</label>
    <length>50</length>
    <type>Text</type>
</CustomField>