default/objects/NVMStatsSF__NVM_Outbound_CDR__c/fields/NVMStatsSF__Unique_CallId__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Unique_CallId__c</fullName>
    <label>CallId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>