default/objects/NVMStatsSF__NVM_Outbound_CDR__c/listViews/NVMStatsSF__All.listView-meta.xml
<ListView>
    <fullName>NVMStatsSF__All</fullName>
    <columns>NAME</columns>
    <columns>NVMStatsSF__AgentId__c</columns>
    <columns>NVMStatsSF__Duration__c</columns>
    <columns>NVMStatsSF__RingDuration__c</columns>
    <columns>NVMStatsSF__Time__c</columns>
    <columns>NVMStatsSF__AppletName__c</columns>
    <columns>NVMStatsSF__State__c</columns>
    <columns>NVMStatsSF__TelNum__c</columns>
    <columns>NVMStatsSF__Unique_CallId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>